-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.0.0-rc1
-
Windows 7 64 bit
Qt 5.1.1
MinGW gcc 4.8
gdb 7.5.1
- Open simple.pro from Creator's repository.
- Set a breakpoint on the last code line of function testQImageDisplay().
- Let the debugger run into this breakpoint.
- For the object named "im", set display format to "Displayed".
A small window will open which shows a gray (?) rectangle.
I tried with the binary package of Qt 5.1.1 which was built with MinGW gcc 4.8.
Instead, it should display the content of the QImage named "im", a black smiley on red background. With my own builds of Qt 4.8.4 using MinGW gcc 4.4, or Qt 4.8.5 using MinGW gcc 4.8 this works fine.
For Gerrit Dashboard: QTCREATORBUG-10402 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
155851,2 | Debugger: Fix reporting of special dumper formats for LLDB | 4.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |