Debugger: Fix reporting of special dumper formats for LLDB

E.g. for QImage etc.

Change-Id: I78201f55448a151d40d0d7fb10440a6cb87efd03
Task-number: QTCREATORBUG-10402
Reviewed-by: Christian Stenger <christian.stenger@theqtcompany.com>